Jwt added with the other inhancement in ui

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,9 +5,13 @@ GROQ_API_KEY=your_groq_api_key_here
 
 # Clerk Authentication
 CLERK_SECRET_KEY=sk_test_your_clerk_secret_key_here
+# Clerk Frontend API for JWT verification (e.g., clerk.your-app.com)
+CLERK_FRONTEND_API=
+# Set to true in production to enforce JWT signature verification
+REQUIRE_JWT_VERIFICATION=false
 
 # API Settings  
 REQUIRE_API_KEY=false
 
 # CORS Origins
-ALLOWED_ORIGINS=http://localhost:3001
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
